# Vajra

./: .gitignore  README.md  pyproject.toml
.github/workflows/: scan.yml
samples/litellm_1_82_6_github/: setup.py
samples/litellm_1_82_6_pypi/: PKG-INFO
samples/litellm_1_82_6_pypi/litellm/: __init__.py  proxy_server.py
samples/litellm_1_82_8_pypi/: PKG-INFO  litellm_init.pth  setup.py
samples/litellm_1_82_8_pypi/litellm/: __init__.py  proxy_server.py
templates/: dashboard.html
tests/: test_cli.py  test_dashboard.py  test_diff.py  test_store.py  test_triage.py
vajra/: __init__.py  __main__.py  ai_packages.py  cli.py  config.py  dashboard.py  diff.py  github.py  models.py  pypi.py  reporter.py  store.py  triage.py  watch.py
vajra/templates/: dashboard.html
