[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vajra"
version = "0.1.0"
description = "Detect Source-to-Artifact Drift in Python packages — catch supply chain attacks before they catch you."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Vajra Contributors" }]
keywords = ["security", "supply-chain", "pypi", "drift-detection", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "anthropic>=0.86",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
vajra = "vajra.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["vajra"]
artifacts = ["vajra/templates/*.html"]
